--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -39,5 +39,8 @@ button {
   line-height: 2rem;
   border: 1px solid #444;
   border-radius: 5px;
+}
 
+button:last-child {
+  grid-column-end: span 2;
 }
