--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -2,9 +2,28 @@ html {
   font: 24px Arial, Helvetica, sans-serif;
 }
 
+body {
+  text-align: center;
+}
+
+
+h1 {
+  font-size: 1.2rem;
+}
+
+h2 {
+  font-size: 1rem;
+  margin: .5em;
+}
+
+h3 {
+  font-size: .9rem;
+  margin: 10px;
+}
+
 #calculator {
   width: 12rem;
-  margin: 80px auto;
+  margin: 40px auto 30px;
   background-color: lightskyblue;
   border: 1px solid #444;
   border-radius: 9px;
@@ -21,7 +40,7 @@ html {
   margin-bottom: .5rem;
   background-color: #444;
   text-align: right;
-  color: tan;
+  color: #fff;
   font-size: 1.3rem;
   box-sizing: border-box;
 }
@@ -43,4 +62,30 @@ button {
 
 button:last-child {
   grid-column-end: span 2;
+}
+
+#color-pickers h3 {
+  width: 5em;
+  text-align: right;
+  display: inline-block;
+  font-weight: 200;
+}
+
+.color-choice {
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  border: 1px solid #444;
+  border-radius: 4px;
+  margin: 10px 2px;
+  box-sizing: border-box;
+  vertical-align: top;
+}
+
+.color-choice input {
+  display: none;
+}
+
+.color-choice.selected {
+  border-width: 5px;
 }
